# django-template

./: LICENSE  README.md  cookiecutter.json
project_name/: .env.example  .env_example  Makefile  README.md  pyproject.toml  requirements.txt  tailwind.config.js
project_name/apps/core/: views.py
project_name/apps/users/: models.py  views.py
project_name/apps/users/migrations/: 0001_initial.py
project_name/config/: celery.py  settings.py  urls.py
project_name/config/settings/: __init__.py  apps.py  auth.py  base.py  celery.py  databases.py  i18n.py  logging.py  mail.py  middleware.py  paths.py  security.py  storages.py
project_name/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  gunicorn.dev.conf.py
project_name/project_name/users/: forms.py  models.py
project_name/static/: tailwind.css
project_name/templates/components/: timer.html
project_name/templates/pages/: index.html
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  Makefile  manage.py  pyproject.toml  requirements.txt  tailwind.css
{{cookiecutter.project_name}}/apps/core/: views.py
{{cookiecutter.project_name}}/apps/core/templates/bases/: base.html
{{cookiecutter.project_name}}/apps/core/templates/blocks/: alert_messages.html
{{cookiecutter.project_name}}/apps/users/: admin.py  forms.py  models.py  urls.py  views.py
{{cookiecutter.project_name}}/apps/users/migrations/: 0002_group.py
{{cookiecutter.project_name}}/components/: urls.py
{{cookiecutter.project_name}}/components/timer/: timer.py
{{cookiecutter.project_name}}/config/: celery.py  urls.py
{{cookiecutter.project_name}}/config/settings/: __init__.py  apps.py  auth.py  base.py  cache.py  celery.py  databases.py  environ.py  logging.py  mail.py  middleware.py  storages.py
{{cookiecutter.project_name}}/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  gunicorn.dev.conf.py
{{cookiecutter.project_name}}/static/: tailwind.css
{{cookiecutter.project_name}}/templates/components/: field.html  messages.html  top-bar.html
{{cookiecutter.project_name}}/templates/pages/: base.html  index.html
{{cookiecutter.project_name}}/templates/pages/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
{{cookiecutter.project_name}}/templates/pages/users/: login.html  settings.html
(+8 files in other folders)
