[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Fran Lendínez <noemailme@noemail.com>"]
license = ""
readme = "README.md"
packages = [{ include = "apps" }]

[tool.poetry.dependencies]
python = "^3.10"


Django = "^4.1.7"
django-environ = "^0.9.0"
django-htmx = "^1.13.0"

whitenoise = { extras = ["brotli"], version = "^6.3.0" }
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
