[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
django-environ = "^0.10.0"
django-htmx = "^1.14.0"
pytailwindcss = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
