[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
django-environ = "^0.10.0"
django-htmx = "^1.14.0"
pytailwindcss = "^0.2.0"
psycopg2 = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
