[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery~=5.3.4",
    "django-components~=0.81",
    "django~=4.2.5",
    "django-environ~=0.11.2",
    "django-extensions~=3.2.3",
    "django-filter~=23.5",
    "django-htmx~=1.17",
    "django-widget-tweaks~=1.5.0",
    "gunicorn~=21.2.0",
    "psycopg2~=2.9.8",
    "pytailwindcss~=0.2.0",
    "whitenoise~=6.5.0",
    "redis~=5.0.1",
    "django-cotton>=2.0.1",
]

[dependency-groups]
dev = [
    "inotify~=0.2.10",
]


[tool.ruff]
line-length = 150
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"config/settings/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "single"
